<resources>
    <string name="app_name">chatappwithfirebase</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="login_to_continue">Login to continue</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="create_new_account">Create new account</string>
    <string name="add_image">Add image</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_up">Sign up</string>
    <string name="select_user">Select user</string>
    <string name="type_a_message">Type a message</string>
    <string name="online">Online</string>
</resources>